--- a/options/options.html
+++ b/options/options.html
@@ -87,6 +87,23 @@
       #welcomeModal button {
         margin-top: 18px;
       }
+      #status {
+        margin-top: 16px;
+        padding: 12px 16px;
+        background: #48bb78;
+        color: #fff;
+        border-radius: 4px;
+        font-weight: 500;
+        text-align: center;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+      #status.show {
+        opacity: 1;
+      }
+      #status.error {
+        background: #e53e3e;
+      }
     </style>
   </head>
   <body>
@@ -124,7 +141,7 @@
         <input type="number" id="maxTokens" min="1" max="4096" placeholder="e.g. 500" style="margin-bottom: 12px;" />
 
         <div style="height: 10px;"></div>
-        <button id="saveKeyBtn">Save</button>
+        <button type="button" id="saveKeyBtn">Save</button>
       </form>
       <p id="status"></p>
       <div class="footer">
@@ -145,17 +162,5 @@
       </div>
     </div>
     <script src="options.js"></script>
-    <script>
-      // Show welcome modal if URL contains #welcome
-      if (window.location.hash === "#welcome") {
-        document.getElementById("welcomeModal").style.display = "block";
-        document.body.style.overflow = "hidden";
-      }
-      document.getElementById("closeWelcomeBtn")?.addEventListener("click", function() {
-        document.getElementById("welcomeModal").style.display = "none";
-        document.body.style.overflow = "";
-        window.location.hash = "";
-      });
-    </script>
   </body>
 </html>
